--- a/source/R5T.Pictia.Frisia/R5T.Pictia.Frisia.csproj
+++ b/source/R5T.Pictia.Frisia/R5T.Pictia.Frisia.csproj
@@ -8,5 +8,6 @@
     <ProjectReference Include="..\..\..\R5T.Dacia.Extensions\source\R5T.Dacia.Extensions\R5T.Dacia.Extensions.csproj" />
     <ProjectReference Include="..\..\..\R5T.Frisia.Base\source\R5T.Frisia.Base\R5T.Frisia.Base.csproj" />
     <ProjectReference Include="..\..\..\R5T.Pictia.Base\source\R5T.Pictia.Base\R5T.Pictia.Base.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0062\source\R5T.T0062.X001\R5T.T0062.X001.csproj" />
   </ItemGroup>
 </Project>
