--- a/source/R5T.Pictia.Frisia.Construction/R5T.Pictia.Frisia.Construction.csproj
+++ b/source/R5T.Pictia.Frisia.Construction/R5T.Pictia.Frisia.Construction.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.Alamania.Bulgaria\source\R5T.Alamania.Bulgaria\R5T.Alamania.Bulgaria.csproj" />
     <ProjectReference Include="..\..\..\R5T.Bulgaria.Default.Local\source\R5T.Bulgaria.Default.Local\R5T.Bulgaria.Default.Local.csproj" />
@@ -12,10 +11,10 @@
     <ProjectReference Include="..\..\..\R5T.Visigothia.Default.Local\source\R5T.Visigothia.Default.Local\R5T.Visigothia.Default.Local.csproj" />
     <ProjectReference Include="..\R5T.Pictia.Frisia\R5T.Pictia.Frisia.csproj" />
   </ItemGroup>
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
-
 </Project>
