--- a/source/R5T.Pictia.Frisia.Construction/R5T.Pictia.Frisia.Construction.csproj
+++ b/source/R5T.Pictia.Frisia.Construction/R5T.Pictia.Frisia.Construction.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.Alamania.Bulgaria\source\R5T.Alamania.Bulgaria\R5T.Alamania.Bulgaria.csproj" />
     <ProjectReference Include="..\..\..\R5T.Bulgaria.Default.Local\source\R5T.Bulgaria.Default.Local\R5T.Bulgaria.Default.Local.csproj" />
